# microfsm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: microfsmConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  EXAMPLES.md  ISSUES.md  PORTING_GUIDE.md  RELEASES.md  VERIFICATION.md
examples/: README.md
include/: mfsm.h  mfsm_config.h  mfsm_config.h.in
src/: mfsm.c
tests/: CMakeLists.txt  Makefile  test_all.c
tests/compile_fail/: CMakeLists.txt  check_compile_fail.cmake  conflicting_generated_configuration.c  invalid_enable_names.c  invalid_enable_trace.c  invalid_max_states.c  invalid_max_transitions.c  unsupported_abi_override.c
tests/consumers/add_subdirectory_c/: CMakeLists.txt  main.c
tests/consumers/find_package_c/: CMakeLists.txt  main.c
tests/consumers/find_package_cpp/: CMakeLists.txt  main.cpp
